@@ -34,11 +34,11 @@ config:
 	  textures = (
 		{
 			name = "player";
-			file = "astronaut_front.png";
+			file = "tennis_racket_10x60.png";
 		},
 		{
 			name = "ball";
-			file = "enemie_simple.png";
+			file = "ball_16x16.png";
 		}
 	  );
 
@@ -46,23 +46,23 @@ config:
 	  	{
 			name = "player_1";
 			texture = "player";
-			pos_x = 100;
-			pos_y = 100;
+			pos_x = 0;
+			pos_y = 0;
 		},
 		{
 			name = "player_2";
 			texture = "player";
-			pos_x = 1180;
-			pos_y = 100;
+			pos_x = 0;
+			pos_y = 0;
 		}
 	  );
 
 	  objects = (
 		{
-			name = "fixed_1";
+			name = "ball_1";
 			texture = "ball";
-			pos_x = 100;
-			pos_y = 300;
+			pos_x = 0;
+			pos_y = 0;
 		}
 	  );
 
